<resources>
    <string name="app_name">ああbravefrontiercalendar</string>

    <string name="label_month">yyyy年MM月</string>
    <string name="prev"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>
    <string name="menu_title_calendar">Calendar</string>
    <string name="menu_title_list">list</string>
    <string name="menu_title_develop">develop</string>
    <string name="btn_dev">適当に削除</string>
    <string name="btn_clear_data">ローカルデータクリア</string>
    <string name="btn_update">データ更新</string>
    <string name="btn_notification">通知</string>
    <string name="btn_insert_test_data">適当に追加</string>
    <string name="label_default_progress_percent">XX/XX</string>

    <string name="channel_name">ああbravefrontiercalendar</string>
</resources>
